--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bordeDiv {
+  background: #ccc;
+  border: 1px solid black;
+}
+li {
+  display: inline;
+  margin: 10px;
+  padding: 0 20 0 0;
+}
+.activeMenu {
+  color: blue;
+  font-size: 1.2rem;
+}
